# timelines

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  timelines.csv  timelines.html  timelines.py
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/public/: timelines.csv  timelines.py
web/src/: App.tsx  styles.css
web/src/components/: CsvGridEditor.tsx  EditorTabs.tsx  OptionsPanel.tsx  OutputTabs.tsx  PersonCardEditor.tsx  RawCsvEditor.tsx  ToolbarActions.tsx
web/src/lib/: csv-model.ts  png-export.ts  pyodide-runtime.ts
